[package]
name = "multiview"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "multiview"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
png = { workspace = true }
vulkano = { workspace = true, default-features = true }
vulkano-shaders = { workspace = true }
